# fsapi-tools

./: .buildinfo  .gitignore  LICENSE  README.md  api-examples.html  firmware-analysis.html  firmware-structure.html  fsapi-tools.html  genindex.html  index.html  isutool.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: python-sphinx.yml
_sources/: firmware-structure.rst.txt  index.rst.txt
_sources/api/: isu_format.rst.txt  isu_product.rst.txt
_sources/api/ecmascript/: esbin.rst.txt  index.rst.txt
_sources/api/net/: device.rst.txt  nodes.rst.txt
api/: isu_format.html  isu_product.html  isu_update.html
api/ecmascript/: esbin.html  index.html
api/net/: basenode.html  device.html  index.html  nodes.html
decompiler/: Dockerfile  README.md  xdr-decompiler.c
docs/: api-examples.rst  conf.py  firmware-2.0.md  firmware-analysis.rst  fsapi-tools.rst  isutool.rst
docs/api/: isu_update.rst
docs/api/net/: basenode.rst  (+1 more)
fsapi/: __init__.py  __main__.py  netconfig.py
fsapi/ecmascript/: __init__.py  __main__.py  cli.py  esbin.py  opcode.py
fsapi/isu/: __init__.py  cli.py  format.py  product.py  update.py  util.py
fsapi/net/: __init__.py  __main__.py  _enum.py  _nodes.py  _wrap.py  base.py  cli.py  device.py
nodes/: fsapi_nodes.py  nodes.txt
nodes/examples/: README.md  netRemote.multiroom.device.listAll.xml  netRemote.nav.numItems.xml  netRemote.nav.state.xml  netRemote.sys.info.version.xml  netRemote.sys.net.ipConfig.gateway.xml  netremote.sys.net.wlan.setEncType.xml
patterns/: isu.pat
(+30 files in other folders)
